  - Added tests for class PropertyReaderUtils.
  - Added toString class function in PropertyReaderUtils.
  - Added class CollectionUtils with one class function called "list". This
    function converts an Iterator to an ArrayList.
  - Improved tests for class HTTPServiceCaller.
  - Set the unused values to null in the HTTPServiceCaller after poping the
    diagnotisc context identifier.

* XINS/Java Server Framework:
  - Changed some classes to use the Common log messages for programming
    errors.
  - Moved some common functionality from the CallingConvention subclasses up
    to class CallingConvention self. The calling conventions now behave the
    same with regard to the determination of the function name. If the
    function name is specified both in the paramter "_function" and in the
    parameter "function", then both must be the same. Otherwise the request is
    considered invalid.
    All incoming parameters that do not match the pattern "[a-z][a-z0-9_]*"
    (without the quotes) are considered ignorable and will not be sent down to
    the function.
  - If an access rule file contains itself, the parsing will fail.

* Documentation:
  - Added the documentation about the XINS protocol to the release.

* Tests
  - Added new tests for the base64 type, the param combos and the input data
    sections.

______________________________________________________________________________
CHANGES INTRODUCED IN XINS 1.1.0 ALPHA 7:

* XINS/Java Common Library:
  - Added tests for the ExpiryStrategy class. This revealed a bug which caused
    the slot count to be incorrect if the time-out is not a multiple of the
    precision.
  - Changed the ExpiryStrategy to use weak references to the ExpiryFolder
    instances instead of strong references.
  - Marked class Doorman as deprecated. The ExpiryFolder implementation no
    longer uses a Doorman but uses synchronized sections instead. Effictively,
    this fixes the follwing SF.net bugs: